# CipherVision

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py  train.py
app/: main.py
app/api/: auth.py  dashboard.py  embed.py  verify.py
app/auth/: google.py  jwt.py
app/core/: inspect_methods.py  inspect_model.py  pixelseal.py  test_api.py  test_model.py
app/database/: crud.py  database.py  models.py
app/services/: detect_service.py  embed_service.py  image_service.py  payload_decoder.py  payload_encoder.py
app/templates/: dashboard.html  embed.html  login.html  verify.html
configs/: train_config.yaml
notebooks/: COLAB_CELLS.txt
scripts/: benchmark_bch.py  create_tables.py  embed_test.py  generate_keys.py  overfit_test.py  recover_test.py  test_bch.py  test_crud.py  test_db.py  test_jwt.py
src/: crypto.py  dataset.py  loss.py  models.py  robustness.py  train.py
src/ciphervision/crypto/: crypto_utils.py
src/ciphervision/data/: div2k_dataset.py
src/ciphervision/inference/: infer.py
src/ciphervision/models/: network.py
src/ciphervision/training/: train.py
src/crypto/: aes_cipher.py  certificate.py
src/data/: dataset.py
src/losses/: losses.py
src/models/: blocks.py  decoder.py  encoder.py
src/robustness/: attacks.py
