[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ciphervision"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "cryptography",
    "Pillow",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]
